Update to commit bf27a9f from git@github.com:x-team/wp-widget-customizer.git
Includes the following commit(s):

commit bf27a9f89e7178a98643083816a9a4346e843201
Author: Weston Ruter <weston@x-team.com>

    Regenerate readme.md and add missing screenshot

A	assets/screenshot-3.png
M	readme.md

commit f68825092ada0a415b7d8f8f383bcfd1c0478d84
Author: Weston Ruter <weston@x-team.com>

    Add -f to svn-push

M	bin/svn-push

commit bf6e00616cc04b9b1f5c8918c2c60ffc0977abe3
Author: Weston Ruter <weston@x-team.com>

    Bump to version 0.4; update changelog; add screenshot

D	assets/screenshot-3.jpg
A	assets/screenshot-4.jpg
M	readme.txt
M	widget-customizer.php

commit b381e16221bcd2b79ab58f0a653b67b00fd70bea
Merge: 9d958bf 7d31496
Author: Weston Ruter <weston@x-team.com>

    Merge pull request #12 from x-team/widget-accordion

commit 7d314969c705dce59cb84ca8be081d975ef95693
Author: Weston Ruter <weston@x-team.com>

    Add live in-widget-title

M	class-widget-form-wp-customize-control.php
M	widget-customizer.js

commit 11c95c10690427bdb2247874df9a55c55fcfad9b
Author: Weston Ruter <weston@x-team.com>

    Scope controlTabs to control container

M	widget-customizer.js

commit de85025ffccb71185cf41d0dd988b39795d97185
Author: johnregan3 <john.regan@x-team.com>

    widget-accordion Removing unnecessary note

M	class-widget-form-wp-customize-control.php

commit 16367c4b45778ef4a28f305cfcfeae8fe21c5973
Author: johnregan3 <john.regan@x-team.com>

    Changing Tabs to slideToggle()

M	widget-customizer.css
M	widget-customizer.js

commit 9d958bf507a69dd2e71118fb82ec9f1928e3bd3f
Author: Weston Ruter <weston@x-team.com>

    Add .gitignore

A	.gitignore

commit 56fcb9f9894c0b36723ca43b6ccc5bbeb82b46e9
Author: johnregan3 <john.m.regan@gmail.com>

    Widget Accordion Tabs

M	class-widget-form-wp-customize-control.php
M	widget-customizer.css
M	widget-customizer.js


git-svn-id: https://plugins.svn.wordpress.org/widget-customizer/trunk@773901 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -9,3 +9,15 @@
 	-ms-user-select: none;
 	user-select: none;
 }
+
+.customize-control-widget_form .widget {
+	margin-bottom: 0;
+}
+
+.customize-control-widget_form .widget .widget-top {
+	cursor: default;
+}
+
+.customize-control-widget_form .widget .widget-top a {
+	cursor: pointer;
+}
