Update to commit 160b861 from git@github.com:x-team/wp-widget-customizer.git
Includes the following commit(s):

commit 160b8614061f579efde36f153ef8b41af40e0544
Author: Weston Ruter <weston@x-team.com>

    Update version in plugin file to 0.6

M	widget-customizer.php

commit 0b3132976f828ade4142d339576d93ea6356f18f
Merge: 90bd0ec c8969c6
Author: Weston Ruter <weston@x-team.com>

    Merge branch 'develop'

commit c8969c65c9491aecb400cc9ea49c25e952df6528
Author: Weston Ruter <weston@x-team.com>

    Bump version 0.6, update changelog

M	readme.md
M	readme.txt

commit 2509e1f02a8405682e974b7b641f8b5d1875832e
Merge: 77278b8 a5dc70f
Author: Weston Ruter <weston@x-team.com>

    Merge pull request #1 from x-team/issue-1-reordering

commit a5dc70fd5f81d4ec78fc85c0bdced910cb6131d1
Author: Weston Ruter <weston@x-team.com>

    Update ordering of widget form controls when setting is updated

M	widget-customizer.js

commit 3bbdcf5832336b6e9a068c1f20eabaf2b67b6823
Author: Weston Ruter <weston@x-team.com>

    Add @bobbravo2 to contributors

M	readme.md
M	readme.txt

commit b076c743428f09e2338549eaaaf55f123b26e88d
Author: Weston Ruter <weston@x-team.com>

    Disambiguate nonces and ajax actions

M	widget-customizer.js
M	widget-customizer.php

commit 50a298d9eb92efd46e13bfc6ca4206351e6a92d1
Author: Weston Ruter <weston@x-team.com>

    Add control for managing ordering of widgets in sidebar

A	class-sidebar-widgets-wp-customize-control.php
M	widget-customizer.css
M	widget-customizer.js
M	widget-customizer.php

commit ef12cee858c05e79b7fa67abddb6fae69c89c891
Author: Weston Ruter <weston@x-team.com>

    Prevent section description from getting sorted

M	widget-customizer.js

commit 07a5f498a7450866a11f287816eed9b815d26161
Author: Weston Ruter <weston@x-team.com>

    Add pointer:move to widget titles

M	widget-customizer.css

commit 781d7fdaa687a8298b8aed1f39d48cc197b13eb0
Author: Weston Ruter <weston@x-team.com>

    Apply some formatting fixes

M	widget-customizer-preview.js
M

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -1,6 +1,11 @@
+customize-control-sidebar_widgets {
+	display: none;
+}
+
 .customize-control-widget_form.previewer-loading .spinner {
 	display: inline;
 }
+
 .customize-control-widget_form.widget-form-loading .widget-content {
 	opacity: 0.7;
 	pointer-events: none;
@@ -21,6 +26,11 @@
 .customize-control-widget_form .widget .widget-top a {
 	cursor: pointer;
 }
+
+.customize-control-widget_form .widget .customize-control-title {
+	cursor: move;
+}
+
 .control-section.accordion-section.widget-customizer-highlighted > .accordion-section-title,
 .customize-control-widget_form.widget-customizer-highlighted {
 	border-radius: 2 px;
