Update to commit 21ec684 from git@github.com:x-team/wp-widget-customizer.git
Includes the following commit(s):

commit 21ec6844925a76ada73eaa7a4191237c8f6208ea
Merge: 1e3883f e53f7b3
Author: Weston Ruter <weston@x-team.com>

    Merge pull request #50 from x-team/develop

commit e53f7b32aca539cb9e3690a2b0491e54957aad7e
Author: Weston Ruter <weston@x-team.com>

    Add updated screenshots

M	assets/banner-1544x500.png
M	assets/screenshot-1.png
M	assets/screenshot-2.png
M	assets/screenshot-3.png
M	assets/screenshot-4.png
D	assets/screenshot-5.jpg
A	assets/screenshot-5.png
A	assets/screenshot-6.jpg
M	readme.md
M	readme.txt

commit 5a366e487119e80ba75c11afe7f83448dc064578
Author: Weston Ruter <weston@x-team.com>

    Update readme and bump version for 0.9

M	readme.md
M	readme.txt
M	tests/test-widget-customizer.php
M	widget-customizer.php

commit c6cc2625d47f4601e9235be7f2300292d41ad8d3
Merge: 77ae355 009663a
Author: Weston Ruter <weston@x-team.com>

    Merge branch 'master' into develop

commit 77ae355582aaa995d5d547b7678905271e339338
Author: Weston Ruter <weston@x-team.com>

    Do actions, add ajaxurl, and add div#widgets-right for compat

M	widget-customizer.js
M	widget-customizer.php

commit 5d6dd72901322b011284d50c9b9dd68a85c15af9
Author: Weston Ruter <weston@x-team.com>

    Prevent plugins from forcing widget controls to be wide in customizer

M	widget-customizer.css

commit e8c34492465c20cd44a8427da575a22c913ede9e
Author: Weston Ruter <weston@x-team.com>

    Remove erroneous array_version from sidebars_widgets array

M	widget-customizer.php

commit 1b3f87e98631fda33f3dfb8966044a1aae64bdfd
Author: Weston Ruter <weston@x-team.com>

    Fix failure to add initial instance of multi-widget

M	widget-customizer.php

commit d62857ae661cb1ce0d593173fb5db0a1fb8341a0
Author: Weston Ruter <weston@x-team.com>

    Fix widget addition regression caused by bad nonce check

M	widget-customizer.php

commit 3f9e205dfbce245bf36ea3a1d8772844cf0a8bd5
Merge: 6d1ffde 4cd538f
Autho

--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -1,4 +1,4 @@
-.customize-control-sidebar_widgets {
+.customize-control-sidebar_widgets label {
 	display: none;
 }
 .customize-control-sidebar_widgets .hide-if-js {
@@ -20,6 +20,13 @@
 
 .customize-control-widget_form .widget {
 	margin-bottom: 0;
+
+	/**
+	 * Prevent plugins (e.g. Widget Visibility in Jetpack) from forcing widget forms
+	 * to be wide and so overflow the customizer panel
+	 */
+	left: auto !important;
+	max-width: 100%;
 }
 
 .customize-control-widget_form .widget .widget-top {
@@ -43,4 +50,9 @@
 	border-radius: 2 px;
 	outline: none;
 	box-shadow: 0 0 3px #CE0000;
+}
+
+/* MP6-compat */
+#customize-theme-controls .accordion-section-content .widget {
+	color: black;
 }
