--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -52,6 +52,10 @@
 	box-shadow: 0 0 3px #CE0000;
 }
 
+#widget-customizer-control-templates {
+	display: none;
+}
+
 /* MP6-compat */
 #customize-theme-controls .accordion-section-content .widget {
 	color: black;
