--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -20,6 +20,8 @@
 
 .customize-control-widget_form .widget {
 	margin-bottom: 0;
+	margin-left: -10px;
+	margin-right: -10px;
 
 	/**
 	 * Prevent plugins (e.g. Widget Visibility in Jetpack) from forcing widget forms
@@ -47,6 +49,10 @@
 	cursor: pointer;
 }
 
+.customize-control-widget_form .widget .widget-inside {
+	padding: 0 10px 10px 10px;
+}
+
 .customize-control-widget_form .widget .customize-control-title {
 	cursor: move;
 }
@@ -65,4 +71,153 @@
 /* MP6-compat */
 #customize-theme-controls .accordion-section-content .widget {
 	color: black;
+}
+
+
+
+/**
+ * Styles for new widget addition panel
+ */
+
+.wp-full-overlay-main {
+	right: auto; /* this overrides a right: 0; which causes the preview to resize, I'd rather have it go off screen at the normal size. */
+	width: 100%;
+}
+
+.add-new-widget {
+	cursor: pointer;
+	display: block;
+	clear: both;
+	padding: 13px 20px 10px 20px;
+	margin: 0px -20px -23px -20px;
+	text-align: right;
+	transition: all 0.2s;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+.add-new-widget:hover {
+	opacity: 0.8;
+	outline: none;
+}
+.add-new-widget:active {
+	opacity: 0.6;
+}
+.add-new-widget:focus {
+	outline: none;
+}
+.add-new-widget:focus b {
+	outline: 1px dotted;
+}
+.add-new-widget:before {
+	content: "\f132";
+	display: inline-block;
+	-webkit-font-smoothing: antialiased;
+	font: normal 16px/1 'dashicons';
+	vertical-align: middle;
+	border: 1px solid rgba(0,0,0,0.2);
+	border-radius: 80px;
+	padding: 4px 2px 1px 2px;
+	position: relative;
+	top: -2px;
+	transition: all 0.2s;
+}
+#available-widgets .widget {
+	position: static;
+}
+.add-new-widget b {
+	padding-left: 8px;
+}
+
+#available-widgets {
+	margin: 0;
+	z-index: 1;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: -300px;
+	width: 300px;
+	padding-bottom: 46px;
+	overflow: auto;
+	background: #fff;
+	transition: all 0.2s;
+	box-shadow: inset -1px 0 4px rgba(0,0,0,0.3);
+}
+#available-widgets-filter {
+	position: fixed;
+	bottom: 0;
+	left: 300px;
+	right: 0;
+	background: rgba(255,255,255,0.95);
+	border-top: 1px solid rgba(0,0,0,0.1);
+	width: 300px;
+	padding: 8px 20px;
+	box-sizing: border-box;
+	z-index: 2;
+	display: none;
+}
+.adding-widget #available-widgets-filter {
+	display: block;
+}
+#available-widgets-filter input {
+	width: 100%;
+	border-radius: 30px;
+	padding: 5px 5px 2px 20px;
+}
+
+#available-widgets .widget-tpl {
+	padding: 15px 15px 15px 60px;
+	cursor: pointer;
+	border-bottom: 1px solid rgba(0,0,0,0.05);
+	position: relative;
+}
+#available-widgets .widget-tpl:hover,
+#available-widgets .widget-tpl.selected {
+	box-shadow: inset 0 1px 0 rgba(0,0,0,0.05);
+	background: rgba(0,0,0,0.05);
+}
+#available-widgets .widget-icon {
+	position: absolute;
+	top: 20px;
+	left: 20px;
+	height: 24px;
+	width: 24px;
+}
+#available-widgets .widget-top,
+#available-widgets .widget-top:hover {
+	border: none;
+	box-shadow: none;
+	background: transparent;
+}
+#available-widgets .widget-title h4 {
+	font-size: 14px;
+	padding: 10px 0 5px 0;
+}
+#available-widgets .widget .widget-description {
+	padding: 0;
+	color: #777;
+}
+
+#customize-preview {
+	transition: all 0.2s;
+}
+
+body.adding-widget {}
+body.adding-widget .add-new-widget {
+	color: rgb( 173, 6, 15 );
+}
+body.adding-widget .add-new-widget:before {
+	-webkit-transform: rotate(45deg);
+	border-color: rgba( 173, 6, 15, 1);
+	color: rgb( 173, 6, 15 );
+}
+body.adding-widget #available-widgets {
+	left: 0;
+}
+body.adding-widget .wp-full-overlay-main {
+	left: 300px;
+}
+body.adding-widget #customize-preview {
+	opacity: 0.4;
 }
