--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -1,3 +1,12 @@
+
+/**
+ * Hide all sidebar sections by default, only show them (via JS) once the
+ * preview loads and we know whether the sidebars are used in the template.
+ */
+.control-section[id^="accordion-section-sidebar-widgets-"] {
+	display:none;
+}
+
 .customize-control-sidebar_widgets label {
 	display: none;
 }
@@ -50,7 +59,7 @@
 }
 
 .customize-control-widget_form .widget .widget-inside {
-	padding: 0 10px 10px 10px;
+	padding: 1px 10px 10px 10px;
 }
 
 .customize-control-widget_form .widget .customize-control-title {
