--- a/widget-customizer.css
+++ b/widget-customizer.css
@@ -25,6 +25,10 @@
 }
 
 
+.wp-full-overlay-sidebar {
+	overflow: visible;
+}
+
 /**
  * Hide all sidebar sections by default, only show them (via JS) once the
  * preview loads and we know whether the sidebars are used in the template.
@@ -46,11 +50,22 @@
 	opacity: 0.5;
 }
 
-.customize-control-widget_form.previewer-loading .spinner {
-	display: inline;
+
+.customize-control-widget_form.is-live-previewable .widget-control-save {
+	display: none;
 }
 
-.customize-control-widget_form.widget-form-loading .widget-content {
+.customize-control-widget_form .spinner {
+	display: inline;
+	opacity: 0.0;
+	-webkit-transition: opacity 0.1s;
+	transition: opacity 0.1s;
+}
+.customize-control-widget_form.previewer-loading .spinner {
+	opacity: 1.0;
+}
+
+.customize-control-widget_form.widget-form-loading:not(.is-live-previewable) .widget-content {
 	opacity: 0.7;
 	pointer-events: none;
 	-moz-user-select: none;
@@ -61,13 +76,35 @@
 
 .customize-control-widget_form .widget {
 	margin-bottom: 0;
+}
 
+.customize-control-widget_form:not(.wide-widget-control) {
 	/**
 	 * Prevent plugins (e.g. Widget Visibility in Jetpack) from forcing widget forms
 	 * to be wide and so overflow the customizer panel
 	 */
 	left: auto !important;
 	max-width: 100%;
+}
+.customize-control-widget_form.wide-widget-control .widget-inside {
+	position: fixed;
+	left: 299px;
+	top: 25%;
+	padding: 20px;
+	border: 1px solid rgb(229, 229, 229);
+	z-index: -1;
+}
+.customize-control-widget_form.wide-widget-control.collapsing .widget-inside {
+	z-index: -2;
+}
+
+.customize-control-widget_form.wide-widget-control .widget-top {
+	-webkit-transition: background-color 0.4s;
+	transition: background-color 0.4s;
+}
+.customize-control-widget_form.wide-widget-control.expanding .widget-top,
+.customize-control-widget_form.wide-widget-control.expanded:not(.collapsing) .widget-top {
+	background-color: rgb(227, 227, 227);
 }
 
 .widget-inside {
@@ -78,6 +115,18 @@
 
 .widget-top {
 	cursor: move;
+}
+
+.customize-control-widget_form.expanded a.widget-action:after {
+	content: "\f142";
+}
+
+.customize-control-widget_form.wide-widget-control a.widget-action:after {
+	content: "\f139";
+}
+
+.customize-control-widget_form.wide-widget-control.expanded a.widget-action:after {
+	content: "\f141";
 }
 
 .widget-title-action {
@@ -112,9 +161,9 @@
 **/
 
 .reorder-toggle {
-	float: left;
-	clear: left;
-	margin: 14px 10px 0 10px;
+	float: right;
+	padding: 5px 10px;
+	margin-right: 10px;
 	text-decoration: none;
 	cursor: pointer;
 	outline: none;
@@ -294,48 +343,41 @@
 .add-new-widget {
 	cursor: pointer;
 	float: right;
-	clear: right;
-	padding: 13px 20px 10px 20px;
-	margin: 0px -20px -23px -20px;
-	text-align: right;
 	-webkit-transition: all 0.2s;
 	transition: all 0.2s;
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-}
-
-.add-new-widget:hover {
-	opacity: 0.8;
+	-moz-outline: none;
 	outline: none;
-}
-
-.add-new-widget:active {
-	opacity: 0.6;
-}
-
-.add-new-widget:focus {
-	outline: none;
-}
-
-.add-new-widget:focus b {
-	outline: 1px dotted;
 }
 
 .add-new-widget:before {
 	content: "\f132";
 	display: inline-block;
 	position: relative;
-	top: -2px;
-	padding: 4px 2px 1px 2px;
+		left: -2px;
+		top: -1px;
 	font: normal 16px/1 'dashicons';
 	vertical-align: middle;
-	border: 1px solid rgba(0,0,0,0.2);
-	border-radius: 80px;
 	-webkit-transition: all 0.2s;
 	transition: all 0.2s;
 	-webkit-font-smoothing: antialiased;
+}
+
+body.adding-widget .add-new-widget,
+body.adding-widget .add-new-widget:hover {
+	background: #EEE;
+	border-color: #999;
+	color: #333;
+	-webkit-box-shadow: inset 0 2px 5px -3px rgba(0, 0, 0, 0.5);
+	box-shadow: inset 0 2px 5px -3px rgba(0, 0, 0, 0.5);
+}
+body.adding-widget .add-new-widget:before {
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
 }
 
 #available-widgets .widget {
@@ -348,67 +390,44 @@
 	width: auto !important;
 }
 
-.add-new-widget b {
-	padding-left: 8px;
-}
-
 #available-widgets {
 	position: absolute;
 	overflow: auto;
 	top: 0;
 	bottom: 0;
-	left: -300px;
+	left: -301px;
 	width: 300px;
 	margin: 0;
-	padding-bottom: 46px;
 	z-index: 1;
 	background: #fff;
 	-webkit-transition: all 0.2s;
 	transition: all 0.2s;
-	-webkit-box-shadow: inset -1px 0 4px rgba(0,0,0,0.3);
-	box-shadow: inset -1px 0 4px rgba(0,0,0,0.3);
+	border-right: 1px solid #dddddd;
 }
 
 #available-widgets-filter {
-	display: none;
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	left: 300px;
-	width: 300px;
-	padding: 8px 20px;
-	background: #fafafa;
-	background: rgba(255,255,255,0.95);
-	border-top: 1px solid rgba(0,0,0,0.1);
-	z-index: 2;
+	padding: 8px 17px 7px 13px;
+	border-bottom: 1px solid #e4e4e4;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
 
-.adding-widget #available-widgets-filter {
-	display: block;
-}
-
 #available-widgets-filter input {
-	padding: 5px 5px 2px 20px;
+	padding: 5px 10px 2px 10px;
 	width: 100%;
-	border-radius: 30px;
 }
 
 #available-widgets .widget-tpl {
 	position: relative;
 	padding: 20px 15px 20px 60px;
-	-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.05);
-	box-shadow: inset 0 -1px 0 rgba(0,0,0,.05);
+	border-bottom: 1px solid #e4e4e4;
 	cursor: pointer;
 }
 
 #available-widgets .widget-tpl:hover,
 #available-widgets .widget-tpl.selected {
 	background: #fafafa;
-	-webkit-box-shadow: inset -4px 0 4px -4px rgba(0,0,0,0.3), inset 3px 0 4px -4px rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,.07);
-	box-shadow: inset -4px 0 4px -4px rgba(0,0,0,0.3), inset 3px 0 4px -4px rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,.07);
 }
 
 #available-widgets .widget-top,
@@ -432,19 +451,6 @@
 #customize-preview {
 	-webkit-transition: all 0.2s;
 	transition: all 0.2s;
-}
-
-body.adding-widget {}
-body.adding-widget .add-new-widget {
-	color: rgb( 173, 6, 15 );
-}
-
-body.adding-widget .add-new-widget:before {
-	color: rgb( 173, 6, 15 );
-	border-color: rgba( 173, 6, 15, 1);
-	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
-	transform: rotate(45deg);
 }
 
 body.adding-widget #available-widgets {
@@ -614,3 +620,40 @@ body.adding-widget #customize-preview {
 /* twitter */
 #available-widgets [class*="tweet"] .widget-title:before,
 #available-widgets [class*="twitter"] .widget-title:before { content: "\f301"; }
+
+
+@media screen and (max-height: 700px) and (min-width: 981px) {
+	.customize-control {
+		margin-bottom: 0;
+	}
+	.widget-top {
+		-webkit-box-shadow: none;
+		box-shadow: none;
+		margin-top: -1px;
+	}
+	.widget-top:hover {
+		position: relative;
+		z-index: 1;
+	}
+	.last-widget {
+		margin-bottom: 15px;
+	}
+	.widget-title h4 {
+		padding: 13px 15px;
+	}
+	.widget-top a.widget-action:after {
+		padding-top: 9px;
+	}
+	.widget-reorder-nav span {
+		height: 39px;
+	}
+	.widget-reorder-nav span:before {
+		line-height: 39px;
+	}
+	#customize-theme-controls .widget-area-select li {
+		padding: 9px 15px 11px 42px;
+	}
+	#customize-theme-controls .widget-area-select li:before {
+		top: 6px;
+	}
+}
